services/hn-service-client-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-service-affinity
spec:
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 8111
  selector:
    app: hn-service
