services/hn-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hn-service-loadbalancer
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8111
  selector:
    app: hn-service
