services/hn-service-multi-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-service-named-port
spec:
  ports:
  - port: 80
    targetPort: http
  selector:
    app: hn-service-named-port
