services/hn-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hn-service-nodeport
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8111
    nodePort: 30123
  selector:
    app: hn-service
