services/hn-service-without-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: hn-endpoint-service
spec:
  ports:
  - port: 8111
