services/hn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-service
spec:
  ports:
  - port: 80
    targetPort: 8111
  selector:
    app: hn-service
