services/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  ports:
  - port: 81
    targetPort: 8080
  selector:
    app: inventory-microservice
