services/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostname-nodeservice
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: node-service-items
