services/order-service-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  ports:
  - port: 81
    targetPort: 8222
  selector:
    app: order-microservice
