services/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: order-microservice
