services/orders-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: orders-microservice-ingress
spec:
  ingressClassName: nginx # use only with k8s version >= 1.18.0
  tls:
  - hosts:
    - classpath.com
    secretName: cafe-secret
  rules:
  - host: classpath.com
    http:
      paths:
      - path: /api/v1/orders
        backend:
          serviceName: order-service
          servicePort: 80
